# photography-portfolio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  design.excalidraw  pyproject.toml  tailwind.config.js
app/: config.py  main.py
app/models/: photo.py
app/router/: htmx.py  pages.py
app/services/: gallery.py
app/templates/: base.html  collection.html  index.html
app/templates/partials/: gallery_grid.html  lightbox.html  sticky_note.html
data/: collections.yaml  photos.yaml
scripts/: add-photo.py  generate-thumbnails.py  new-photo.py
static/css/: output.css
static/js/: app.js
styles/: input.css
tests/: conftest.py  test_htmx.py  test_pages.py
tests/test_data/: collections.yaml  photos.yaml
